[Core][Server][.htaccess][Configure][Refactor] Using __DEFAULT_SERVER_URL_PARAM_NAME__

--- a/public/.htaccess
+++ b/public/.htaccess
@@ -4,5 +4,5 @@
     RewriteBase /BanMVC/public
     RewriteCond %{REQUEST_FILENAME} !-d
     RewriteCond %{REQUEST_FILENAME} !-f
-    RewriteRule  ^(.+)$ index.php?url=$1 [QSA,L]
+    RewriteRule  ^(.+)$ index.php?_main_url_system_=$1 [QSA,L]
 </IfModule>
